# idp

./: Makefile  README.md  compose.yml
backend/: Cargo.toml
backend/migrations/2024-08-11-053049_books/: down.sql  up.sql
backend/migrations/2024-08-11-060118_seed_books/: up.sql
backend/src/: main.rs  schema.rs
backend/src/controllers/: book_controller.rs
backend/src/domain/: book.rs
backend/src/infrastructure/: db.rs
backend/src/models/: book.rs
backend/src/repositories/: book_repository.rs
backend/src/services/: book_service.rs
frontend/src/app/: layout.tsx  page.tsx
infrastructure/backend/docker/: Dockerfile.development  Dockerfile.production
infrastructure/db/docker/: Dockerfile
infrastructure/frontend/docker/: Dockerfile.development  Dockerfile.production
infrastructure/nginx/: nginx.conf
infrastructure/nginx/docker/: Dockerfile.development
